# atttick

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  mcp_config.json  pyproject.toml
.github/workflows/: deploy.yml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWidget.tsx  MessageInput.tsx  MessageList.tsx  SourceBadge.tsx
frontend/src/hooks/: useChat.ts
frontend/src/styles/: chat.module.css
frontend/src/types/: chat.ts
staff_echo/application/: __init__.py
staff_echo/application/commands/: __init__.py  approve_transcript.py  handoff_to_human.py  process_transcript.py  send_message.py  send_message_streaming.py
staff_echo/application/dtos/: __init__.py  chat_dto.py  knowledge_dto.py  transcript_dto.py
staff_echo/application/orchestration/: __init__.py  chat_response_workflow.py
staff_echo/application/queries/: __init__.py  get_conversation.py  get_transcript_status.py  search_knowledge.py
staff_echo/domain/: __init__.py
staff_echo/domain/entities/: __init__.py  conversation.py  knowledge_entry.py  message.py  transcript.py
staff_echo/domain/events/: __init__.py  chat_events.py  event_base.py  transcript_events.py
staff_echo/domain/ports/: __init__.py  ai_provider_port.py  cache_port.py  conversation_repository_port.py  event_bus_port.py  knowledge_repository_port.py  pii_detector_port.py  transcript_repository_port.py  (+1 more)
staff_echo/infrastructure/: __init__.py  seed_data.py
staff_echo/presentation/: __init__.py
(+44 files in other folders)
